--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <p class="intro">
       Willkommen auf meiner Seite. Ich bin Pilzsachverständige der Deutschen Gesellschaft für Mykologie (DGfM) und biete Interessierten Pilzberatungen und Lehrwanderungen an.
-      Meine Angebote finden in Niedersachsen im Raum Tostedt sowie in der umliegenden Region zwischen Buchholz in der Nordheide, Hollenstedt, Sittensen und Schneverdingen statt.
+      Meine Angebote finden im Süden Hamburgs, in Niedersachsen im Raum Tostedt sowie in der umliegenden Region zwischen Buchholz in der Nordheide, Hollenstedt, Sittensen und Schneverdingen statt.
     </p>
 
  <section class="image-full">
@@ -54,7 +54,7 @@
   </section>
     
     <p>
-      Egal ob ihr zum ersten Mal Speisepilze sammeln möchtet oder euch bereits gut auskennt und eure Artenkenntnis vertiefen wollt – bei meinen Pilztouren gehe ich auf alle Teilnehmer ein.
+      Egal, ob ihr zum ersten Mal Speisepilze sammeln möchtet oder euch bereits gut auskennt und eure Artenkenntnis vertiefen wollt – bei meinen Pilztouren gehe ich auf alle Teilnehmer ein.
       Die Touren sind für Anfänger und Fortgeschrittene gleichermaßen geeignet.
     </p>
 
@@ -87,12 +87,12 @@
 
     <p>
       Schon als Kind habe ich mit meiner Familie Pilze gesammelt. Die Anzahl der Arten war begrenzt – denn zum Glück haben wir nur das gesammelt, was wir sicher kannten.
-      Aber hier sie entstanden: die Freude und die Aufregung darüber, was man wohl finden wird. Denn Pilze suchen ist wie Schatzsuche.
+      Aber hier ist sie entstanden: die Freude und die Aufregung darüber, was man wohl finden würde. Denn Pilze suchen ist wie Schatzsuche.
     </p>
 
     <p>
       Dieser Gedanke hat mich im Erwachsenenleben wieder näher an die Pilze gebracht. Durch einen Umzug näher an die Natur habe ich Pilze plötzlich überall wahrgenommen.
-      Ich wollte wissen, was ich vor mir hatte, und diesen faszinierenden Lebewesen einen Namen geben.
+      Ich wollte wissen, was ich vor mir hatte und diesen faszinierenden Lebewesen einen Namen geben.
     </p>
 
     <p>
@@ -110,7 +110,7 @@
       Meine Beobachtungen halte ich in naturalistischen Zeichnungen und Aquarellen fest.
       Sie dienen mir als Fundtagebuch und Nature Journal beim Erarbeiten neuen Wissens.
       Darüber hinaus zeichne ich auch freiere Pilz- und Naturmotive und fertige Drucke an.
-      Diese Kunstwerke und weiteres Pilz- und Naturwissen teile ich auf meinem Instagram Kanal unter bunt.fink.
+      Diese Kunstwerke und weiteres Pilz- und Naturwissen teile ich auf meinem Instagram-Kanal unter bunt.fink.
     </p>
   </section>
 
@@ -134,7 +134,7 @@
 
     <p>
       Oft bleiben Pilze im Verborgenen, denn ihre Fruchtkörper treten nur kurz in Erscheinung.
-      Ihr Myzel, ist jedoch ganzjährig im Boden oder im Holz aktiv. Denn Pilze sind Fadenwesen und sie bestehen hauptsächlich aus feinen Myzelsträngen.
+      Ihr Myzel ist jedoch ganzjährig im Boden oder im Holz aktiv. Denn Pilze sind Fadenwesen und sie bestehen hauptsächlich aus feinen Myzelsträngen.
       Für ein funktionierendes Waldökosystem übernehmen sie zentrale Aufgaben:
       Sie versorgen Pflanzen in einer Mykorrhiza-Symbiose mit Wasser und Nährstoffen
       und sind maßgeblich an der Zersetzung von Totholz beteiligt.
