--- a/index.html
+++ b/index.html
@@ -206,11 +206,17 @@
 
     <h3>Nächster Termin</h3>
     <p>
-      Oktober 2026<br>
+      10. Oktober 2026<br>
       10:00 – 13:00 Uhr<br>
       Lehrwanderung im Raum Tostedt – Plätze frei
     </p>
-
+    
+  <p>
+      25. Oktober 2026<br>
+      10:00 – 13:00 Uhr<br>
+      Lehrwanderung im Raum Tostedt – Plätze frei
+    </p>
+    
     <h3>Preise</h3>
     <p>
       Erwachsene: 30,- € pro Person<br>
